3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/skills.c: correctly copy spell's path_repelled field when inscribing a
 scroll, so casting from said scroll works with MOVING_BALL.
Nicolas Weeger 2007-06-18

server/login.c: Fix crash at login if player is set to rejoin party, and that
party does not exist - shouldn't try to use partyname from null structure.
MSW 2007-06-17

Documentation, no functional change.
 server/skill_util.c skills.c
Fix variable name confusion Doxygen.
 random_maps/standalone.c
 test/unit/random_maps/stubs_random.c
 test/unit/common/stubs_common.c
 test/unit/socket/stubs_socket.c
 utils/bwp.c mapper.c
Nicolas Weeger 2007-06-17

Documentation, no functional change.
  server/disease.c gods.c spell_effect.c
Nicolas Weeger 2007-06-17

Fix bug #1735464: Reset command does not accept relative names.
 server/c_wiz.c
Nicolas Weeger 2007-06-16

Remove Crossedit, replaced by Gridarta. See http://sourceforge.net/projects/gridarta
for more information.
Removed paths:
 crossedit
 test/unit/crossedit
Modified paths:
 acinclude.m4 configure.ac Makefile.am
 include/autoconf.h.in define.h global.h object.h
 common/button.c init.c loader.l map.c object.c
 server/init.c login.c
 test/bugs/bugtrack/check_1727944.c
 test/unit/Makefile.am
Nicolas Weeger 2007-06-13

Add some unit tests.
 test/unit/server/check_c_object.c Makefile.am
 test/unit/common/check_object.c
Nicolas Weeger 2007-06-13

Tentative optimizations, shouldn't cause issues but need testing.
 common/object.c: fix_object() doesn't need to be called all the time.
 server/c_object.c: why is player/monster removed then inserted? if special case,
  please document why
Nicolas Weeger 2007-06-10
