@@ -15,6 +15,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+server/plugins.c: add PLUGIN_DEBUG to log plugin activity, off by default
+ (log gets filled with debug info which is not usually relevant).
+Nicolas Weeger 2007-06-18
+
 server/skills.c: correctly copy spell's path_repelled field when inscribing a
  scroll, so casting from said scroll works with MOVING_BALL.
 Nicolas Weeger 2007-06-18
